Add 404 responses to get and update endpoints
