# docs/swagger.yaml
@@ -188,6 +188,10 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/api.ResponseError'
+        "404":
+          description: File not found
+          schema:
+            $ref: '#/definitions/api.ResponseError'
         "500":
           description: Internal server error
           schema:
